infrastructure/base/flux/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: flux-webhook.example.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webhook-receiver
            port:
              number: 80
  tls:
  - hosts:
    - flux-webhook.example.com
    secretName: flux-webhook-tls
